k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gorand-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gorand-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gorand-app
    spec:
      containers:
        - name: gorand
          image: tecker/gorand:TEMPLATE_FROM_YQ
          ports:
            - containerPort: 80
          livenessProbe:
            initialDelaySeconds: 3
            periodSeconds: 3
            httpGet:
              scheme: HTTP
              path: /
              port: 80
...
