k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gorand-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: gorand-app
  type: ClusterIP
...
