k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gorand-ingress
spec:
  rules:
  - host: gorand.tecker.ga
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gorand-service
            port:
              number: 80
...
